# rag_news

./: .gitignore  docker-compose.yml
app/: .env.sample  Dockerfile  db.sqlite3  pyproject.toml
app/chatpage/: apps.py  forms.py  urls.py  views.py
app/chatpage/services/: llm.py  qdrant.py
app/chatpage/templates/chatpage/: chat.html  header.html
app/webapp/: settings.py  urls.py
feeder/: .env.sample  Dockerfile  crontab  pyproject.toml
feeder/src/: config.py  feed_romania_insider.py
mcp_server/: Dockerfile  main.py  pyproject.toml  settings.py
