[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.8",
    "langchain>=1.0.8",
    "langchain-core>=1.0.7",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-ollama>=1.0.0",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.0.3",
    "qdrant-client>=1.16.0",
]
