[project]
name = "feeder"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "langchain-core>=1.0.5",
    "langchain-ollama>=1.0.0",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "lxml>=6.0.2",
    "ollama>=0.6.1",
    "qdrant-client>=1.16.0",
    "requests>=2.32.5",
]
